my work new commit

--- a/apps/templates/home/ui-maps.html
+++ b/apps/templates/home/ui-maps.html
@@ -229,7 +229,7 @@
                 SMOTE)</option>
             <option value="Logistic Regression (Demographics + Behavior, Weighted)">Logistic Regression (Demographics +
                 Behavior, Weighted)</option>
-            <option value="Gradient Boosting (Demographics Only, SMOTE)">Gradient Boosting (Demographics Only, SMOTE)
+            <option value="Gradient Boosting (Demographics Only, SMOTE)">Votting ensamble (logistic, Random forest, Gradient Boosting)
             </option>
         </select>
     </div>
