--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -8,15 +8,18 @@
       width: 260px;
       z-index: 1000;
       background: linear-gradient(180deg, #ffffff 0%, #f8f9fa 100%);
-      box-shadow: 5px 0 2rem 0 rgba(136, 152, 170, .15); /* normal left-side shadow */
+      box-shadow: 5px 0 2rem 0 rgba(136, 152, 170, .15);
+      /* normal left-side shadow */
     }
 
     .sidebar-wrapper {
-      padding-top: 75px; /* if you have a top logo */
+      padding-top: 75px;
+      /* if you have a top logo */
     }
 
     .main-panel {
-      margin-left: 260px; /* leave space on the left */
+      margin-left: 260px;
+      /* leave space on the left */
       margin-right: 0;
     }
 
