--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -28,12 +28,14 @@
     Financial Dashboard in Kenya - {% block title %}{% endblock %} | AppSeed
   </title>
 
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+    name='viewport' />
   <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="/static/assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
+  <link href="https://unpkg.com/material-dashboard@2.1.2/assets/css/material-dashboard.css" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="/static/assets/demo/demo.css" rel="stylesheet" />
 
@@ -70,11 +72,12 @@
   {% include 'includes/scripts.html' %}
 
   {% include 'includes/scripts-sidebar.html' %}
-  
+
   <!-- Specific Page JS goes HERE  -->
   {% block javascripts %}
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   {% endblock javascripts %}
-  
+
 </body>
+
 </html>
